--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,13 +61,8 @@
             android:layout_alignParentEnd="true"
             android:textColor="@drawable/text_selector"/>
     </RelativeLayout>
-    <com.jerry.jtakeaway.custom.AniImgButton
-        android:alpha="0.5"
-        android:background="@drawable/loginbtn_selector"
-        android:src="@drawable/next"
-        android:scaleType="centerInside"
-        android:id="@+id/loginbtn_ain"
-        android:padding="15dp"
+    <com.jerry.jtakeaway.custom.JLoginButton
+        android:id="@+id/loginbtn_btn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
