--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,106 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.generalActivity.LoginActivity"
-    android:background="#222222">
-    <ImageView
-        android:id="@+id/loginbackground_iv"
+    android:background="@drawable/startimg"
+    tools:context=".ui.generalActivity.LoginActivity">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/login_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
-
-    <ImageView
-        android:id="@+id/login_font_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/login_font"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:contentDescription="login_font" />
-
-    <include layout="@layout/username_input"
-        android:layout_alignBottom="@+id/login_font_iv"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginBottom="-100dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
-
-    <include layout="@layout/password_input"
-        android:layout_alignBottom="@+id/login_font_iv"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginBottom="-180dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignBottom="@+id/login_font_iv"
-        android:layout_marginBottom="-240dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="20dp"
-        android:alpha="0.7">
-        <TextView
-            android:id="@+id/forgetpwd_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="忘记密码?"
-            android:textColor="@drawable/text_selector" />
-        <TextView
-            android:id="@+id/sign_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="还没有账号?"
-            android:layout_alignParentEnd="true"
-            android:textColor="@drawable/text_selector"/>
-    </RelativeLayout>
-    <com.jerry.jtakeaway.custom.JLoginButton
-        android:id="@+id/loginbtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/login_font_iv"
-        android:layout_marginBottom="-300dp" />
+        android:layout_marginBottom="70dp"
+        app:cardBackgroundColor="#919191"
+        app:cardCornerRadius="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:gravity="center">
-        <CheckBox
-            android:id="@+id/userdeal_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="登录即代表你同意我们的 用户协议"
-            android:textColor="#fbfbfb"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/float_transparent"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:text="疯狂外卖"
+                android:textColor="#222222"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
+            <include
+                layout="@layout/username_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="20dp" />
 
-    <LinearLayout
-        android:layout_marginBottom="-50dp"
-        android:id="@+id/error_wrapper"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:background="#5a5a5a">
-        <TextView
-            android:id="@+id/error_tv"
-            android:text="错误"
-            android:textColor="#f5222d"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <include
+                layout="@layout/password_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="20dp" />
 
-    </LinearLayout>
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:background="#F76B6C"
+                android:text="登录/注册" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:text="--忘记密码--"
+                android:textColor="#222222" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.jerry.jtakeaway.custom.AniImgButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/QQ"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
