--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,8 @@
     tools:context=".ui.generalActivity.LoginActivity">
 
     <androidx.cardview.widget.CardView
+        android:padding="0dp"
+        android:clipChildren="false"
         android:id="@+id/login_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,64 +22,125 @@
         app:cardCornerRadius="10dp">
 
         <LinearLayout
+            android:layout_margin="0dp"
+            android:id="@+id/login_card_wapper"
+            android:clipChildren="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/float_transparent"
+            android:background="#919191"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="疯狂外卖"
-                android:textColor="#222222"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
-
-            <include
-                layout="@layout/username_input"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="20dp" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="疯狂外卖"
+                    android:textColor="#222222"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
+            </RelativeLayout>
 
-            <include
-                layout="@layout/password_input"
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_weight="1">
+               <include
+                   layout="@layout/username_input"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_centerInParent="true"
+                   android:layout_marginStart="20dp"
+                   android:layout_marginEnd="20dp" />
+           </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="20dp" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <include
+                    layout="@layout/password_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginEnd="20dp" />
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:background="#F76B6C"
-                android:text="登录/注册" />
+            </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:text="--忘记密码--"
-                android:textColor="#222222" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <com.jerry.jtakeaway.custom.JLoginButton
+                    android:layout_centerInParent="true"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/login_btn"/>
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/forgetpwd_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="--忘记密码--"
+                    android:textStyle="bold"
+                    android:textColor="@drawable/text_selector" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.jerry.jtakeaway.custom.AniImgButton
-                    android:layout_width="50dp"
+                    android:id="@+id/qq_aib"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="50dp"
-                    android:src="@drawable/QQ"/>
-
+                    android:src="@drawable/qq"
+                    android:scaleType="centerInside"
+                    android:background="@color/float_transparent"/>
+                <com.jerry.jtakeaway.custom.AniImgButton
+                    android:id="@+id/weibo_aib"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
+                    android:src="@drawable/webo"
+                    android:scaleType="centerInside"
+                    android:background="@color/float_transparent"/>
+                <com.jerry.jtakeaway.custom.AniImgButton
+                    android:id="@+id/wechat_aib"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
+                    android:src="@drawable/wechat"
+                    android:scaleType="centerInside"
+                    android:background="@color/float_transparent"/>
             </LinearLayout>
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_weight="1">
+               <TextView
+                   android:id="@+id/just_login_tv"
+                   android:layout_centerInParent="true"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="已有账号可直接登录"
+                   android:textColor="@drawable/text_selector"
+                   android:textStyle="bold" />
+           </RelativeLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
