--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/location_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="null"
+        android:text="成都"
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#222222"
