--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -82,7 +82,29 @@
                        android:id="@+id/menu_recommend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
-                       android:scrollbars="none"/>
+                       android:scrollbars="none"
+                       android:paddingBottom="20dp"/>
+               </RelativeLayout>
+               <RelativeLayout
+                   android:layout_marginTop="20dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+                   <TextView
+                       android:layout_centerVertical="true"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="五星好店推荐"
+                       android:textSize="20sp"
+                       android:textColor="#222222"
+                       android:layout_marginStart="10dp"/>
+                   <Button
+                       android:layout_width="wrap_content"
+                       android:layout_height="25dp"
+                       android:text="更多"
+                       android:layout_alignParentEnd="true"
+                       android:layout_centerVertical="true"
+                       android:layout_marginEnd="10dp"
+                       android:background="@drawable/button_selector"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
@@ -93,6 +115,27 @@
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"/>
+               </RelativeLayout>
+               <RelativeLayout
+                   android:layout_marginTop="20dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+                   <TextView
+                       android:layout_centerVertical="true"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="网红热店推荐"
+                       android:textSize="20sp"
+                       android:textColor="#222222"
+                       android:layout_marginStart="10dp"/>
+                   <Button
+                       android:layout_width="wrap_content"
+                       android:layout_height="25dp"
+                       android:text="更多"
+                       android:layout_alignParentEnd="true"
+                       android:layout_centerVertical="true"
+                       android:layout_marginEnd="10dp"
+                       android:background="@drawable/button_selector"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
