--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.user.activity.MenuActivity">
 
@@ -222,6 +222,7 @@
                         android:textSize="14sp" />
 
                     <com.jerry.jtakeaway.custom.AniImgButton
+                        android:id="@+id/choose_conpon_aib"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_alignParentEnd="true"
@@ -259,6 +260,7 @@
                     android:textSize="14sp" />
 
                 <com.jerry.jtakeaway.custom.AniImgButton
+                    android:id="@+id/choose_food_aib"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
@@ -293,6 +295,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/address_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
@@ -311,6 +314,7 @@
                 </LinearLayout>
 
                 <com.jerry.jtakeaway.custom.AniImgButton
+                    android:id="@+id/choose_address_aib"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
@@ -325,12 +329,24 @@
                 android:layout_height="20dp"
                 android:background="#E4E4E4" />
             <!--精品菜搭配-->
+
+            <TextView
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="精品菜搭配"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="#222222"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:descendantFocusability="blocksDescendants">
+
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/goog_food_recyclerview"
+                    android:id="@+id/good_food_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="none" />
@@ -339,19 +355,73 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-       <com.jerry.jtakeaway.custom.JTIButton
-           android:id="@+id/test"
-           android:layout_width="50dp"
-           android:layout_height="50dp"
-           app:jtext="客服"
-           app:jsrc="@drawable/dribbble_music_corner"/>
+        android:layout_weight="0.8"
+        app:cardElevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"
+                android:orientation="horizontal">
+                <com.jerry.jtakeaway.custom.JTIButton
+                    android:id="@+id/server_people_jtib"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:jsrc="@drawable/server_people"
+                    app:jtext="客服"
+                    app:jtextSize="30"
+                    tools:ignore="NestedWeights" />
+                <com.jerry.jtakeaway.custom.JTIButton
+                    android:id="@+id/shopping_car_jtib"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:jsrc="@drawable/shopping_car"
+                    app:jtext="购物车"
+                    app:jtextSize="30"/>
+            </LinearLayout>
+            <View
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#919191"/>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2">
+                <TextView
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="加入购物车"
+                    android:textColor="#222222"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
 
+            </RelativeLayout>
+            <RelativeLayout
+                android:background="#F76B6C"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2">
+                <TextView
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="立即购买"
+                    android:textColor="#ffffff"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
+            </RelativeLayout>
 
-
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
