--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="textBlue">#2196F3</color>
     <color name="textGreen">#86cd3e</color>
+    <color name="grey">#999999</color>
 </resources>
