设置支付密码

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -12,4 +12,9 @@
         <attr name="jtextColor" format="reference"/>
         <attr name="jtextSize" format="integer"/>
     </declare-styleable>
+
+    <declare-styleable name="JPayEditText">
+        <attr name="jpwdLength" format="integer"/>
+        <attr name="jborderWidth" format="integer"/>
+    </declare-styleable>
 </resources>
