--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -44,6 +44,7 @@
             android:layout_marginTop="40dp"
             android:textColor="#d9d9d9"/>
         <TextView
+            android:id="@+id/money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0.00"
